[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "python-exports"
version = "1.3.0dev0"
description = "@export decorator that adds a function or class to __all__"
authors = [{name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []
packages = [{include = "exports"}] # don't remove

[project.urls]
Repository = "https://github.com/jorenham/exports"
Documentation = "https://github.com/jorenham/exports/blob/master/README.md"
Issues = "https://github.com/jorenham/exports/issues"
Changelog = "https://github.com/jorenham/exports/releases"
Funding = "https://github.com/sponsors/jorenham"


[dependency-groups]
dev = [
    "basedmypy[faster-cache]>=2.10.0",
    "basedpyright>=1.28.4",
    "codespell>=2.4.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]


[tool.hatch.build]
include = "exports"
exclude = [
    "**/.*",
    "**/*.yaml",
    "/dist",
    "/tests",
    "CONTRIBUTING.md",
    "uv.lock",
]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["exports"]


[tool.codespell]
skip = '*.lock,.venv,.vscode,dist'
context = 2


[tool.mypy]
strict = true
strict_bytes = true
strict_concatenate = true

enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
enable_incomplete_feature = ["PreciseTupleTypes"]
disallow_any_expr = false
disallow_any_explicit = false
disallow_any_decorated = false
local_partial_types = true
warn_unreachable = false
warn_unused_ignores = true


[tool.pyright]
include = ["exports", "tests"]
exclude = [".venv"]
stubPath = "."
pythonPlatform = "All"
typeCheckingMode = "all"
reportUnusedCallResult = false # https://github.com/microsoft/pyright/issues/8650


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["exports", "tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
log_cli_level = "INFO"
xfail_strict = true


[tool.repo-review]
ignore = [
    "PY004",
    "PY006",
    "PC110",
    "PC170",
    "PC180",
    "RTD",
]


[tool.ruff]
src = ["exports"]
show-fixes = true
force-exclude = true
extend-exclude = [".github", ".vscode", "tests"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY", "DOC", "EM102", "TRY003", "D104"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["exports"]
lines-after-imports = 2
lines-between-types = 0

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
preview = true
quote-style = "single"
# keep in sync with .editorconfig
indent-style = "space"
line-ending = "lf"


[tool.tox]
min_version = "4"
requires = ["tox-uv>=1"]
env_list = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
    "basedmypy",
    "basedpyright",
    "repo-review",
    "ruff",
]

[tool.tox.env_run_base]
description = "pytest"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["pytest"]]

[tool.tox.env.basedmypy]
description = "basedmypy"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [
    [
        "mypy",
        "--no-incremental",
        "--cache-dir=/dev/null",
        "--soft-error-limit=-1",
        "--no-pretty",
        "--hide-error-context",
        {replace = "posargs", default = ["."], extend = true},
    ],
]

[tool.tox.env.basedpyright]
description = "basedpyright"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["basedpyright", {replace = "posargs", default = [], extend = true}]]

[tool.tox.env.ruff]
description = "ruff"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [
    ["ruff", "check", "--show-fixes"],
    ["ruff", "format", "--check"],
]
