[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "exports"
module-root = ""

[project]
name = "python-exports"
version = "1.3.0"
description = "@export decorator that adds a function or class to __all__"
authors = [{ name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/jorenham/exports"
Documentation = "https://github.com/jorenham/exports/blob/master/README.md"
Issues = "https://github.com/jorenham/exports/issues"
Changelog = "https://github.com/jorenham/exports/releases"
Funding = "https://github.com/sponsors/jorenham"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "basedpyright==1.37.1",
  "pyrefly==0.47.0",
  "pytest>=9.0.2",
  "ruff>=0.14.11",
  "sp-repo-review[cli]>=2025.11.21",
  "ty==0.0.11",
]

# mypy

[tool.mypy]
strict = true
strict_bytes = true
strict_concatenate = true

enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
enable_incomplete_feature = ["PreciseTupleTypes"]
disallow_any_expr = false
disallow_any_explicit = false
disallow_any_decorated = false
local_partial_types = true
warn_unreachable = false
warn_unused_ignores = true

# (based)pyright

[tool.pyright]
include = ["exports", "tests"]
exclude = [".venv"]
stubPath = "."
pythonPlatform = "All"
typeCheckingMode = "all"
reportUnusedCallResult = false # https://github.com/microsoft/pyright/issues/8650

# pyrefly

[tool.pyrefly]
project-includes = ["exports", "tests"]

# ty

[tool.ty]

[tool.ty.environment]
python-platform = "all"
python-version = "3.10" # unlike mypy and pyright, this doesn't depend on the Python env

[tool.ty.src]
include = ["exports", "tests"]

[tool.ty.analysis]
respect-type-ignore-comments = false # for mypy compat

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-unresolved-reference = "error"

# pytest

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra"]
testpaths = ["exports", "tests"]
filterwarnings = ["error"]
log_level = "INFO"
strict = true

# repo-review

[tool.repo-review]
ignore = ["PY004", "PY006", "RTD"]

# ruff

[tool.ruff]
src = ["exports"]
show-fixes = true
force-exclude = true
extend-exclude = [".github", ".vscode", "tests"]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "DOC", "EM102", "TRY003", "D104", "RUF067"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["exports"]
lines-after-imports = 2
lines-between-types = 0
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"
skip-magic-trailing-comma = true

# tox

[tool.tox]
min_version = "4"
requires = ["tox-uv>=1"]
env_list = [
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
  "mypy",
  "basedpyright",
  "pyrefly",
  "ty",
  "repo-review",
  "ruff",
]

[tool.tox.env_run_base]
description = "pytest"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["pytest"]]

[tool.tox.env.mypy]
description = "mypy"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [
  [
    "mypy",
    "--no-incremental",
    "--cache-dir=/dev/null",
    { replace = "posargs", default = ["."], extend = true },
  ],
]

[tool.tox.env.basedpyright]
description = "basedpyright"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["basedpyright", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.pyrefly]
description = "pyrefly"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["pyrefly", "check", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.ty]
description = "ty"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [
  [
    "ty",
    "check",
    "--error-on-warning",
    "--output-format=concise",
    { replace = "posargs", default = [], extend = true },
  ],
]

[tool.tox.env.ruff]
description = "ruff"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [
  ["ruff", "check", "--show-fixes"],
  ["ruff", "format", "--check"],
]
